@@ -1,6 +1,6 @@
 {
-  "count": 42,
-  "uniques": 14,
+  "count": 52,
+  "uniques": 18,
   "clones": [
     {
       "timestamp": "2022-05-07T00:00:00Z",
@@ -66,6 +66,11 @@
       "timestamp": "2022-05-19T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-05-20T00:00:00Z",
+      "count": 10,
+      "uniques": 7
     }
   ]
 }
